--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <header class="cabecalho">
     <img src="./image.png">
     <h1 class="titulo-principal">MILKSHAKESPEARE</h1>
+    <h2 class="titulo-secundario">Leituras que inspiram, sabores que encantam!</h2>
 
  </header>   
 </body>
