--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
  <header class="cabecalho">
-    <img src="./image.png">
+    <img src="./image.png" class="logo">
     <h1 class="titulo-principal">MILKSHAKESPEARE</h1>
     <h2 class="titulo-secundario">Leituras que inspiram, sabores que encantam!</h2>
 
