--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
  <header class="cabecalho">
     <img src="./image.png" class="logo">
-    <h1 class="titulo-principal">MILKSHAKESPEARE</h1>
+    <h1 class="titulo-principal">MilkShakespeare</h1>
     <h2 class="titulo-secundario">Leituras que inspiram, sabores que encantam!</h2>
 
  </header>   
