--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
  <header class="cabecalho">
-    <div class="logo">
-    <img src="./image.png" >
-    </div>
+    <div class="cabecalho2">
+    <img src="./image.png" class="logo">
     <h1 class="titulo-principal">MilkShakespeare</h1>
     <h2 class="titulo-secundario">Leituras que inspiram, sabores que encantam!</h2>
-
+    </div>
  </header>   
 </body>
 </html>
