--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
  <header class="cabecalho">
+    <div class="inicio">
     <img src="./image.png" class="logo">
+    </div>
     <h1 class="titulo-principal">MilkShakespeare</h1>
     <h2 class="titulo-secundario">Leituras que inspiram, sabores que encantam!</h2>
  </header>   
