--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
  <header class="cabecalho">
     <div class="inicio">
-    <img src="./image.png" class="logo">
+    <img src="(1).png" class="logo">
     </div>
     <h1 class="titulo-principal">MilkShakespeare</h1>
     <h2 class="titulo-secundario">Leituras que inspiram, sabores que encantam!</h2>
