--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </div>
     <h1 class="titulo-principal">MilkShakespeare</h1>
     <h2 class="titulo-secundario">Leituras que inspiram, sabores que encantam!</h2>
+    <a href="https://www.example.com" class="btn">CLIQUE AQUI</a>
  </header>   
 </body>
 </html>
