--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </div>
     <h1 class="titulo-principal">MilkShakespeare</h1>
     <h2 class="titulo-secundario">Leituras que inspiram, sabores que encantam!</h2>
+    <img src="https://tenor.com/pt-PT/view/milkshake-chocolate-gif-20656547" alt="GIF">
     <a href="https://www.example.com" class="btn">CLIQUE AQUI</a>
  </header>   
 </body>
