--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     <h1 class="titulo-principal">MilkShakespeare</h1>
     <h2 class="titulo-secundario">Leituras que inspiram, sabores que encantam!</h2>
-    <img src="https://tenor.com/pt-PT/view/milkshake-chocolate-gif-20656547" alt="GIF">
+    <div class="tenor-gif-embed" data-postid="20656547" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/milkshake-chocolate-gif-20656547">Milkshake Chocolate GIF</a>from <a href="https://tenor.com/search/milkshake-gifs">Milkshake GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
     <a href="https://www.example.com" class="btn">CLIQUE AQUI</a>
  </header>   
 </body>
