--- a/html/index.html
+++ b/html/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
  <header class="cabecalho">
-    <div class="inicio">
-    <img src="'' (1).png" class="logo">
+    <div class="header">
+        <img src="'' (1).png" alt="logo" class="imagem-header">
+        <div class="texto-header">
+            <h1>MilkShakespeare</h1>
+            <h2>Leituras que inspiram, sabores que encantam!</h2>
+        </div>
     </div>
-    <h1 class="titulo-principal">MilkShakespeare</h1>
-    <h2 class="titulo-secundario">Leituras que inspiram, sabores que encantam!</h2>
-    <a href="pagina-livros.html" class="botao-livros">Livros disponíveis</a>
  </header>   
 </body>
 </html>
