--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
  <header class="cabecalho">
-    <div class="header">
-        <img src="'' (1).png" alt="logo" class="imagem-header">
-        <div class="texto-header">
+    <div class="inicio">
+        <img src="'' (1).png" alt="logo" class="logo">
+        <div class="titulo-principal">
             <h1>MilkShakespeare</h1>
             <h2>Leituras que inspiram, sabores que encantam!</h2>
         </div>
