--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         </div>
     </div>
  </header>
- <h3>JGHGHGDFGHJKLJHGFDFVBNM</h3>   
+ <h3 class="texto1">Nosso objetivo é oferecer um ambiente aconchegante onde nossos clientes possam desfrutar de uma ampla seleção de livros, acompanhados por milkshakes artesanais, criando uma experiência única.</h3>
 </body>
 </html>
