--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         </div>
     </div>
  </header>
- <h3 class="texto1">Nosso objetivo é oferecer um ambiente aconchegante onde nossos clientes possam desfrutar de uma ampla seleção de livros, acompanhados por milkshakes artesanais, criando uma experiência única.</h3>
+     <div class="texto01">
+        <h1>Nosso objetivo é oferecer um ambiente aconchegante onde nossos clientes possam desfrutar de uma ampla seleção de livros, acompanhados por milkshakes artesanais.</h1>
+        <h2>Segunda a sexta: 10h ás 20h</h2>
+        <h3>Sábado: 10h ás 18h</h3>
+        <h4>Domingo: Fechado (Abertura eventual para eventos especiais)</h4>
+     </div>
+ 
 </body>
 </html>
