--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
  </header>
      <div class="texto01">
         <h1>Nosso objetivo é oferecer um ambiente aconchegante onde nossos clientes possam desfrutar de uma ampla seleção de livros, acompanhados por milkshakes artesanais.</h1>
-        <h2>Segunda a sexta: 10h ás 20h</h2>
-        <h3>Sábado: 10h ás 18h</h3>
-        <h4>Domingo: Fechado (Abertura eventual para eventos especiais)</h4>
+        <p >Segunda a sexta: 10h ás 20h
+            Sábado: 10h ás 18h
+            Domingo: Fechado (Abertura eventual para eventos especiais)
+        </p>
      </div>
  
 </body>
