--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <div class="texto01">
         <h1>Nosso objetivo é oferecer um ambiente aconchegante onde nossos clientes possam desfrutar de uma ampla seleção de livros, acompanhados por milkshakes artesanais.</h1>
         <p>Segunda a sexta: 10h ás 20h
-            Sábado: 10h ás 18h
+        <p>Sábado: 10h ás 18h</p>
             Domingo: Fechado (Abertura eventual para eventos especiais)
         </p>
      </div>
