--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
  </header>
      <div class="texto01">
-        <h1>Nosso objetivo é oferecer um ambiente aconchegante onde nossos clientes possam desfrutar de uma ampla seleção de livros, acompanhados por milkshakes artesanais.</h1>
+        <p>Nosso objetivo é oferecer um ambiente aconchegante onde nossos clientes possam desfrutar de uma ampla seleção de livros, acompanhados por milkshakes artesanais.</p>
         <p>Segunda a sexta: 10h ás 20h</p>
         <p>Sábado: 10h ás 18h</p>
            <p>Domingo: Fechado (Abertura eventual para eventos especiais)</p>
